[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Arimo-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 5
outline_color = Color( 0, 0.486275, 0.0588235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 5
outline_color = Color( 0, 0.207843, 0.486275, 1 )
font_data = ExtResource( 2 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.5
margin_right = 127.5
margin_bottom = 40.0
alignment = 1

[node name="Host" type="Button" parent="HBoxContainer"]
margin_right = 42.0
margin_bottom = 40.0
text = "Host"

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 46.0
margin_top = 13.0
margin_right = 62.0
margin_bottom = 27.0
text = "Or"

[node name="Join" type="Button" parent="HBoxContainer"]
margin_left = 66.0
margin_right = 101.0
margin_bottom = 40.0
disabled = true
text = "Join"

[node name="CodeInput" type="LineEdit" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 255.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
placeholder_text = "Room Code"

[node name="Leave" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 259.0
margin_right = 308.0
margin_bottom = 40.0
text = "Leave"

[node name="Feed" type="TextEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_right = 500.0
rect_min_size = Vector2( 1000, 0 )
custom_fonts/font = SubResource( 1 )
readonly = true
smooth_scrolling = true
wrap_enabled = true

[node name="HostingLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "HOSTING"

[node name="JoinedLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "JOINED"

[node name="CodeLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -292.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "CODE"
align = 1

[connection signal="pressed" from="HBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="text_changed" from="HBoxContainer/CodeInput" to="." method="_on_CodeInput_text_changed"]
[connection signal="pressed" from="HBoxContainer/Leave" to="." method="_on_Leave_pressed"]
